# JsonBenchmark

./: .gitignore  .gitmodules  .travis.yml  LICENSE  Makefile  Notes  Notes.2024  README.md  Travis.enc  config.h.in  configure  configure.ac  git_deploy_key.enc  init3rdParty  initPlatform  runOneTest  runTests  save  setUpNewProject  success
.github/workflows/: build.yml
data/performance/: canada.json
init/: JsonBox  JsonPerformance  Jsonifier  Jzon  ThorsMongo  ThorsSerializer  cJSON  ccan  fastjson  gason  jeayeson  json-c  json-voorhees  jsoncpp  jsonxx  juson  jvar  pjson  rapidjson  simdjson  udb-jsason-parser  ujson  ujson4c  vincenthz-libjson  yajl
script/: AddJsonLibrary  conformance.php  performance.php  stats.php
src/: SimdjsonDomTest.cpp
src/Memory/: Makefile  Memory.cpp  Memory.h
src/benchmark/: CommonReader.h  FailChecker.h  Makefile  PassChecker.h  PerformanceChecker.cpp  PerformanceChecker.h  RoundTripChecker.h  TestSuite.cpp  TestSuite.h  ValidateFloat.h  ValidateString.h  benchmark.cpp  benchmark.h  filesystem.h  memory.cpp
